# oschina_news_browser

backend/: .gitignore  .openapi-generator-ignore  data.db  openapi.yaml  setup.cfg
backend/.openapi-generator/: FILES
backend/src/openapi_server/: context.py  main.py  security_api.py
backend/src/openapi_server/apis/: default_api.py  default_api_base.py
backend/src/openapi_server/config/: config.py
backend/src/openapi_server/database/: database.py  models.py
backend/src/openapi_server/impl/: default_api_impl.py  utils.py
backend/src/openapi_server/models/: api_response.py  auth_token.py  blog_detail.py  collect_request.py  extra_models.py  info_item.py  news_detail.py  page_result.py  related_item.py  search_item.py
backend/tests/: test_default_api.py
news_check_app/: README.md  api.yaml  pubspec.yaml
news_check_app/android/app/: build.gradle.kts
news_check_app/lib/: main.dart
news_check_app/lib/controllers/: auth_controller.dart  news_list_controller.dart
news_check_app/lib/models/: models.dart  models.freezed.dart  models.g.dart
news_check_app/lib/network/: token_interceptor.dart
news_check_app/lib/pages/: account_page.dart  home_tab.dart  login_page.dart  news_detail_page.dart  news_tab_page.dart  oschina_login_page.dart
news_check_app/lib/utils/: store_keys.dart  store_utils.dart  token_utils.dart
news_check_app/lib/widgets/: bottom_navigation_bar.dart  hero_page_route.dart  news_simple_card.dart
news_check_app/openapi/: README.md
news_check_app/openapi/.openapi-generator/: FILES
news_check_app/test/: widget_test.dart
(+44 files in other folders)
