[metadata]
name = openapi_server
version = 1.0.0
description = 基于FastAPI开发的OSCHINA资讯代理后端API 1. 集成OSCHINA OAuth2.0授权登录 2. 后端代理所有OSCHINA OpenAPI请求，客户端无直接调用 3. 支持新闻/博客列表/详情、全局搜索 4. 自定义用户收藏功能（新闻/博客收藏管理） 5. 自定义数据模型适配Flutter客户端展示需求 
long_description = file: README.md
keywords = OpenAPI OSCHINA IT资讯APP后端API
python_requires = >= 3.10.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
